--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
                 <h1>
                     Wildly Expensive JPEGs
                     <span class="subheading">(Also known as NFTs)</span>
+					
                 </h1>
+				<nav>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
             </div>
         </header>
 	    <main>
